--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,22 @@
+/*************/
+/* Generelt*/
+/************/
 * {
     padding: 0;
-    margin: 0;
+  
     box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
+
+}
+body {
+    background-color: white;
+    max-width: 1280px;
+    margin: 0 auto;
+  }
+  
+a{
+    text-decoration: none;
+
 }
 
 img { 
@@ -14,9 +29,12 @@ nav {
     padding: 5px;
 }
 
+
 /* css til index-siden */
 
-/* header styling */
+/**************************/
+/****** HEADER *************/
+/**************************/
 .index-header {
     position: sticky; /* fester header til sin posisjon*/
     display: flex;
@@ -43,19 +61,17 @@ nav {
     border: none;
     color: black;
     font-variant-caps: all-small-caps;
-    font-family: 'Nunito', sans-serif;
     font-size: 1.3rem;
     font-weight: 900;
     text-align: center;
     padding: 10px 15px;
-    text-decoration: none;
+    display: none;
 }
 /* Dropdown meny start */
 .nav-buttons a:hover,
 .dropmenu:hover .dropbutton {
     background-color: #9fc8d8;
     color: #312e2e;
-    text-decoration: underline;
 }
 
 .nav-buttons.dropmenu {
@@ -71,10 +87,9 @@ nav {
 }
 
 .dropmenu-content { 
-    display: none; /* Gjemmer meny-innhold */
-    background-color: #f9f9f9;
     min-width: 160px;
     z-index: 1;
+    display: flex;
 }
 
 .dropmenu-content a {
@@ -91,6 +106,10 @@ nav {
 
 .dropmenu:hover .dropmenu-content {
     display: flex;
+}
+
+.fa{
+    display: none;
 }
 
 /* Dropdown-meny slutt */
@@ -144,12 +163,8 @@ nav {
     background-color: white;
 }
 
-@media(max-width:500px) { /*legger artiklene nedover i en kolonne på visning mindre enn 480px*/
-    .index-highlights { 
-        display: flex;
-        flex-direction: column;
-    }
-}
+
+
 /* artiklene inni */
 
 .articles {
@@ -282,12 +297,20 @@ nav {
     color: #ddc7c7;
 }
 
+
+/**Campus **/
 .campus-container {
     display: grid;
-    grid-template-columns: 50% 50%;
-    /*Make the grid smaller than the container*/
-    grid-template-rows: 50% 50%;
+    grid-template-columns: 1fr 1fr; /* Two columns */
+    gap: 20px; /* Adjust the gap between columns if desired */
+    place-items: center; /* Sentrer både horisontalt og vertikalt */
+
     padding: 60px;
+}
+.campus-img{
+    max-width: 100%; /* Make sure the image doesn't exceed its container */
+    height: auto; /* Maintain the aspect ratio of the image */
+    display: block; /* Remove extra space below the image */
 }
 .campus-overskrift {
     font-size: 2.5rem;
@@ -295,7 +318,6 @@ nav {
     color: black;
     padding-left: 50px;
     padding-top: 10px;
-    font-family: sans-serif;
     font-weight: 600;
 }
 
@@ -305,7 +327,6 @@ nav {
     text-align: left;
     padding-left: 40px;
     padding-top: 8px;
-    font-family: sans-serif;
     margin: 20px;
     font-weight: 400;
 }
@@ -315,7 +336,6 @@ nav {
     padding-top: 40px;
     padding-bottom: 20px;
     font-weight: 600;
-    font-family: sans-serif;
 }
 
 .oversiktsparagraf {
@@ -324,7 +344,6 @@ nav {
     padding-top: 25px;
     padding-bottom: 40px;
     font-size: large;
-    font-family: sans-serif;
 }
 
 .felles_container {
@@ -346,7 +365,6 @@ nav {
 
 .stillerom-oversikt {
     text-align: left;
-    font-family: sans-serif;
     margin: 10px;
 }
 
@@ -359,7 +377,6 @@ nav {
 
 .campus-fasiliteter {
     text-align: left;
-    font-family: sans-serif;
     margin: 30px;
 }
 
@@ -386,11 +403,11 @@ ul li {
 .link-campus    {
     padding: 5px;
     text-align: center;
+    margin-bottom: 25px;
 }
-
 .prøve  {
     display: grid;
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns:2fr  2fr;
     grid-template-rows: repeat(2, min-content);
     place-items: center;
     gap :10px;
@@ -403,8 +420,7 @@ ul li {
 /*   Nav  */
 .topical {
     background-color: rgb(227, 227, 219);
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
+
     font-weight: 500;
 }
 
@@ -426,7 +442,7 @@ ul li {
 }
 
 .topicalmain {
-    padding-top: 205px;
+    padding-top: 200px;
 }
 
 .navlist-topical {
@@ -445,10 +461,6 @@ ul li {
     font-size: 2.5rem;
 }
 
-.videotopical{
-    position: relative;
-}
-
 .europeanflex-container,
 .termsflex-container {
     display: flex;
@@ -460,10 +472,10 @@ ul li {
     padding: 4rem;
 }
 
-.overskriftsmartphones {
+.topicalsmartphones {
     font-size: 2.5rem;
     font-weight: bold;
-    padding-top: 4.5rem;
+    padding-top: 3.5rem;
     text-align: center;
 }
 
@@ -482,7 +494,7 @@ h2 {
 }
 
 .caption {
-    font-size: 1em;
+    font-size: 0.9rem;
     font-style: normal;
 }
 
@@ -495,19 +507,16 @@ h2 {
     padding-bottom: 4rem;
 }
 
-.smartphoneusage{
-    font-size: 2.5em;
-    text-align: center;
-    padding-bottom:15px;
-}
 
+.smartphoneusage{
+    font-size: 40px;
+    text-align: center;
+}
 .midtdel {
     margin: 45px;
     text-align: left;
     padding: 110px;
     padding-top: 30px;
-    padding-bottom: 30px;
-
 }
 
 a:link {
@@ -519,11 +528,11 @@ a:hover {
 }
 
 .topicalnav,
-.bottom {  
+.bottom {
+    padding: 0.5rem 0;
     background-color: rgb(194, 194, 183);
     margin-left: -3rem;
     margin-right: -3rem;
-    
 }
 
 .topical-buttons {
@@ -534,9 +543,8 @@ a:hover {
 }
 
 .topical-buttons>a {
-    font-family: 'Nunito', sans-serif;
     /*navigation font, else it is arial */
-    font-size: 1.3em;
+    font-size: 1.3rem;
     font-weight: 900;
     font-variant: all-small-caps;
     /*font in uppercase*/
@@ -568,19 +576,18 @@ a:hover {
 }
 
 
-
-
 /* css til accessibility*/
 
 .accessibility-container{
     display: flex;
-    padding: 60px;
-    border: 6rem;
+    padding: 50px;
     max-width: 100%;
+
 }
 
 .accessibility-image {
-    max-width: 100%;
+    max-width: 50%;
+    padding-right: 20px;
 }
 
 .definasion{
@@ -589,11 +596,17 @@ a:hover {
     color: black;
     padding-left: 50px;
     padding-top: 10px;
-    font-family: sans-serif;
     font-weight: 600;
 }
+.access-container{
+    margin-top: 100px;
+    margin-bottom: 50px;
+    display: flex;
+    max-width: 100%;
 
-.beskriver-accissibility{
+}
+
+.beskriver-accissibility,.beskriver-accis{
     font-size: 1.1rem;
     color: black;
     text-align: left;
@@ -603,4 +616,93 @@ a:hover {
     margin: 20px;
     font-weight: 400;
 }
+
+
+
+
+/****Media-Query**/
+/*****TABLETS*****/
+/*****************/
+@media screen and (max-width: 768px) {
+    
+.dropmenu-content { 
+    display: none;
+    font-size: 10px;
+ 
+
+}
+.nav-buttons a,
+.dropbutton {
+    display: inline-block;
+    font-variant-caps: all-small-caps;
+    text-align: center;
+    padding: 10px 15px;
+   
+}
+
+.campus-container {
+    grid-template-columns: 1fr 1fr; 
+
+}
+
+.access-container,.accessibility-container{
+    flex-direction: column;
+    align-items: center;
+
+}
+.access-container{
+    margin-top: 4px;
+    margin-bottom: 80px;
+}
+
+.accessibility-image {
+    max-width: 70%
+    
+}
+.img-container{
+   padding-left: 90px;
+}
+.prøve  {
+    display: grid;
+    grid-template-columns:  2fr;
+    grid-template-rows: repeat(2, min-content);
+    place-items: center;
+    gap :10px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.campus-container {
+    padding: 40px;
+    grid-template-columns: 1fr; /* Two columns */
+ 
+}
+.index-highlights { 
+    display: flex;
+    flex-direction: column;
+}
+}
+
+
+
+@media screen and (max-width: 600px) {
+    .definasion{
+        font-size: 1.5rem;
+    
+    }
+   
+    .campus-intro {
+        font-size: 1rem;
+   
+        padding-left: 5px;
+
+
+    }
+ 
+
+    
+
+    }
+
+
+    
 
