--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -274,71 +274,65 @@ nav {
     gap: 20px; 
     padding: 60px;
 }
-/*Gjelder for overskriften til siden*/
+
 .campus-overskrift {
     font-size: 2.5rem;
 
 }
-/*Gjelder for innledningen øverst*/
-.campus-innledning {
+
+.campus-intro {
     font-size: 1.1rem;
 
 }
-/*Gjelder for tittelen til det først avsnittet*/
-.campus-avsnitt-tittel {
+.oversiktstittel {
     text-align: center;
     
+
 }
-/*Gjelder det første avsnittet*/
-.campus-avsnitt {
+.oversiktsparagraf {
     margin: 0 50px 0 50px;
-    padding: 25px 60px 40px 60px;
+    padding: 25px 0 40px 0;
     font-size: 20px;
 }
-/*En grid for å lage en bilde kolasj*/
+
 .image-wrapper {
     display: grid;
     grid-template-columns: 2fr 2fr;
     grid-template-rows: repeat(2, min-content);
     place-items: center;
-    gap: 10px;
-    padding-bottom: 20px;
+    gap :10px;
+
 }
-/*Gjelder alle områdene på p35 f.eks. grupperom, studiesal...*/
-.område-overskrift {
-    padding: 20px 0 0 80px;
+
+.stillerom-overskrift, .studiesal-overskrift, .seminar-overskrift, .grupperom-overskrift {
+    padding:30px 0 0 30px;
     text-align: left;
 }
-/*Laget margin for å bestemme lengden på setningene*/
 .campus-fasiliteter {
     margin: 30px;
-    padding-left: 45px;
 }
-/*Plasserer bildene øverst*/
-.øvrebilde {
+
+.image-1, .image-2, .image-4, .image-5, .image-7, .image-8, .image-10, .image-11 {
   grid-column: 1 / -1;
   width: 300px;
   height: 200px;
   object-fit: cover;
 }
-/*Plasserer bildene nederst*/
-.nedrebilde {
+
+.image-3, .image-6, .image-9, .image-12 {
   grid-row: 1 / 3;
   grid-column: 3 / 3;
   width: 300px;
   height: 410px;
   object-fit: cover;
 }
-/*Gjelder linken nederst*/
+
 .link-campus    {
     padding: 5px;
     text-align: center;
     margin-bottom: 25px;
 }
-/*En grid som gjelder teksten og bildene om de forskjellige områdene.
-  Bildene og teksten blir plassert ved siden av hverandre.
-*/
-.område-container  {
+.prøve  {
     display: grid;
     grid-template-columns:2fr  2fr;
     grid-template-rows: repeat(2, min-content);
@@ -347,6 +341,7 @@ nav {
     padding-left: 15px;
     padding-right: 15px;
 }
+
 /***************/
 /*TOPICAL PAGE*/
 /**************/
